crates/spotuify-tui/tests/snapshots/viz_styles__color_bars-outline.snap
---
source: crates/spotuify-tui/tests/viz_styles.rs
expression: describe(&buffer)
---
───                                     
    ───                                 
                             ──         
        ───                     ──      
            ───           ──            
                                   ──   
                ───    ──               
                    ──                ──

aaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
bbbbcccbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbccbbbbbbbbb
bbbbbbbbcccbbbbbbbbbbbbbbbbbbbbbccbbbbbb
bbbbbbbbbbbbdddbbbbbbbbbbbddbbbbbbbbbbbb
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbddbbb
bbbbbbbbbbbbbbbbdddbbbbddbbbbbbbbbbbbbbb
bbbbbbbbbbbbbbbbbbbbddbbbbbbbbbbbbbbbbdd

a = Rgb(245, 88, 88)
b = Reset
c = Rgb(245, 185, 65)
d = Rgb(30, 215, 96)
