crates/spotuify-tui/tests/snapshots/viz_styles__color_bubbles.snap
---
source: crates/spotuify-tui/tests/viz_styles.rs
expression: describe(&buffer)
---
           ⠠⣀⠂⡀ ⢴⠔  ⢀⡠⣀⠄                
            ⡁⡠⠃ ⠐⠂⠁ ⢢⠋⣨⠂                
       ⢀⢔⡒⢄  ⢠⢤      ⠈              ⢀⣀  
       ⠘⢌⣀⠜  ⠈⠉  ⢀⣀⣀         ⢠⢪⠍⢢   ⠘⠚  
⣀                ⡇⠖ ⡇        ⠈⢢⢤⠊      ⡀
⠂⢱⣴⠖⡄            ⠑⠒⠒⠁     ⡠⠤⠤⡀⠑⠟⠁      ⠂
⠒⠁⠑⠒⠁   ⣠⡤⡀               ⡇⠋ ⡇   ⢠⡶⢢    
        ⠫⠤⠃              ⢰⡾⢻⠉    ⠈⠒⠊    

aaaaaaaaaaabbbbabbaabbbbaaaaaaaaaaaaaaaa
aaaaaaaaaaaacccacccaccccaaaaaaaaaaaaaaaa
aaaaaaaccccaaccaaaaaacaaaaaaaaaaaaaaccaa
aaaaaaaccccaaccaacccaaaaaaaaaccccaaaccaa
daaaaaaaaaaaaaaaaddadaaaaaaaaddddaaaaaad
dddddaaaaaaaaaaaaddddaaaaadddddddaaaaaad
dddddaaadddaaaaaaaaaaaaaaaddadaaadddaaaa
aaaaaaaadddaaaaaaaaaaaaaaddddaaaadddaaaa

a = Reset
b = Rgb(245, 88, 88)
c = Rgb(245, 185, 65)
d = Rgb(30, 215, 96)
