crates/spotuify-tui/tests/snapshots/viz_styles__color_butterfly.snap
---
source: crates/spotuify-tui/tests/viz_styles.rs
expression: describe(&buffer)
---
    ⠈ ⠑⢃⠩⠍⣿⡫⣿⣹⣴⠿⡿⢻⣿⣿⣿⣿⡟⢿⠿⣦⣏⣿⢝⣿⠩⠍⡘⠊ ⠁    
          ⠋⠅⠝⣱⠭⣨⢡⠻⣽⢾⡷⣯⠟⡌⣅⠭⣎⠫⠨⠙          
             ⠁⠈⠘⠉⠐⠊⣹⣏⠑⠂⠉⠃⠁⠈             
                   ⢸⡇                   
             ⢀⢀⢀⢀⢠⢠⢺⡗⡄⡄⡀⡀⡀⡀             
        ⡀  ⢠⣤⠭⢗⣵⣎⢕⢌⢼⡧⡡⡪⣱⣮⡺⠭⣤⡄  ⢀        
           ⠰⢄⠐⠲⢵⡮⢛⠠⣻⣟⠄⡛⢵⡮⠖⠂⡠⠆           
                ⠈⠒⠈⢸⡇⠁⠒⠁                

aaaababbbbbbbbbbbbbbbbbbbbbbbbbbbbabaaaa
aaaaaaaaaabbbbbbbbbbbbbbbbbbbbaaaaaaaaaa
aaaaaaaaaaaaabbbbbbbbbbbbbbaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaabbaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaccccccccccccccaaaaaaaaaaaaa
aaaaaaaacaaccccccccccccccccccaacaaaaaaaa
aaaaaaaaaaaccccccccccccccccccaaaaaaaaaaa
aaaaaaaaaaaaaaaaddddddddaaaaaaaaaaaaaaaa

a = Reset
b = Rgb(30, 215, 96)
c = Rgb(245, 185, 65)
d = Rgb(245, 88, 88)
