crates/spotuify-tui/tests/snapshots/viz_styles__color_classic-peak.snap
---
source: crates/spotuify-tui/tests/viz_styles.rs
expression: describe(&buffer)
---
 ▄                                      
 █ ▇ ▁                                  
 █ █ █ ▂                     ▃          
 █ █ █ █ ▃                 ▅ █ ▆        
 █ █ █ █ █ ▃             ▅ █ █ █ ▇      
 █ █ █ █ █ █ ▃         ▃ █ █ █ █ █ ▇    
 █ █ █ █ █ █ █ ▃     ▃ █ █ █ █ █ █ █ ▇  
 █ █ █ █ █ █ █ █ ▆ ▅ █ █ █ █ █ █ █ █ █ ▇

abaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
acacacaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
acacacacaaaaaaaaaaaaaaaaaaaaacaaaaaaaaaa
acacacacacaaaaaaaaaaaaaaaaacacacaaaaaaaa
adadadadadadaaaaaaaaaaaaadadadadadaaaaaa
adadadadadadadaaaaaaaaadadadadadadadaaaa
adadadadadadadadaaaaadadadadadadadadadaa
adadadadadadadadadadadadadadadadadadadad

a = Reset
b = Rgb(245, 88, 88)
c = Rgb(245, 185, 65)
d = Rgb(30, 215, 96)
