crates/spotuify-tui/tests/snapshots/viz_styles__color_firefly.snap
---
source: crates/spotuify-tui/tests/viz_styles.rs
expression: describe(&buffer)
---
   ⢀    ⢀⣄               ⢀⣄             
  ⠠⡿⠁    ⠁   ⢀⣄     ⠁     ⠁     ⠠⡦⠈     
          ⠈   ⠁       ⢀⣄      ⠺⠂        
     ⠁⡀               ⡀⠁           ⢐⣗   
     ⠈⠋     ⠄                ⢀  ⢀   ⠁   
    ⠄  ⢀       ⠐⠗⢀⣄             ⠙⠁ ⡀⢀   
 ⣀⡀    ⠙⠁       ⣀⣀⣁        ⠁    ⣀⣀⡀ ⠙⠁  
⣿⣿⣿⣷⣤⣀⣀⣠⣴⣿⣿⣶⣤⣤⣴⣿⣿⣿⣿⣷⣤⣀⣤⣴⣶⣷⣦⣄⣀⣠⣴⣿⣿⣿⣿⣶⣤⣴⣾⣿

aaabaaaabcaaaaaaaaaaaaaaabcaaaaaaaaaaaaa
aabcbaaaabaaabcaaaaabaaaaabaaaaabcbaaaaa
aaaaaaaaaabaaabaaaaaaabcaaaaaacbaaaaaaaa
aaaaabbaaaaaaaaaaaaaaabbaaaaaaaaaaabcaaa
aaaaabcaaaaabaaaaaaaaaaaaaaaabaabaaabaaa
aaaabaabaaaaaaabcbcaaaaaaaaaaaaacbabbaaa
addaaaacbaaaaaaaddbaaaaaaaabaaaadddacbaa
dddddddddddddddddddddddddddddddddddddddd

a = Reset
b = Rgb(245, 185, 65)
c = Rgb(245, 88, 88)
d = Rgb(30, 215, 96)
